--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "eejitstools",
     "version": "0.0.0",
     "private": true,
-    "main": "server.js",
+    "main": "./bin/www",
     "scripts": {
         "start": "node ./bin/www",
         "devStart": "DEBUG=eejitstools:* nodemon ./bin/www"
@@ -13,6 +13,7 @@
         "ejs": "^3.1.7",
         "express": "~4.16.1",
         "express-ejs-layouts": "^2.5.1",
+        "fs": "^0.0.1-security",
         "http": "^0.0.1-security",
         "http-errors": "^2.0.0",
         "pug": "^3.0.2",
