--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "eejitstools",
     "version": "0.0.0",
     "private": true,
+    "type": "module",
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
