--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "request": "^2.88.2"
     },
     "devDependencies": {
+        "eslint": "^8.16.0",
         "nodemon": "^2.0.16"
     }
 }
