--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "eslint:recommended",
+    "plugins": ["jsdoc"],
+    "extends": ["eslint:recommended", "plugin:jsdoc/recommended"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -12,6 +13,8 @@
         "indent": ["error", 4, { "SwitchCase": 1 }],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single", { "avoidEscape": true }],
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "jsdoc/newline-after-description": ["error", "never"],
+        "jsdoc/no-undefined-types": ["error"]
     }
 }
