--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "eslint": "^8.16.0",
+        "eslint-plugin-jsdoc": "^39.3.0",
         "nodemon": "^2.0.16"
     }
 }
