--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
-        "devStart": "DEBUG=eejitstools:* nodemon app.js"
+        "dev": "nodemon app.js"
     },
     "dependencies": {
-        "debug": "~2.6.9",
+        "@fastify/static": "^5.0.2",
         "dotenv": "^16.0.0",
-        "ejs": "^3.1.7",
-        "express": "~4.16.1",
-        "express-ejs-layouts": "^2.5.1",
+        "ejs": "^3.1.8",
+        "fastify": "^3.29.0",
         "fs": "^0.0.1-security",
-        "http": "^0.0.1-security",
-        "http-errors": "^2.0.0",
+        "point-of-view": "^5.3.0",
         "request": "^2.88.2"
     },
     "devDependencies": {
