--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single", { "avoidEscape": true }],
         "semi": ["error", "always"],
+        "eqeqeq": ["error", "always"],
+        "prefer-const": ["error"],
+        "prefer-destructuring": ["error", { "array": false, "object": true }, { "enforceForRenamedProperties": false }],
         "jsdoc/newline-after-description": ["error", "never"],
         "jsdoc/no-undefined-types": ["error"]
     }
