--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     },
     "dependencies": {
         "@fastify/static": "^5.0.2",
+        "canvas": "^2.9.1",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.8",
         "fastify": "^3.29.0",
         "fs": "^0.0.1-security",
+        "node-fetch": "^3.2.5",
         "point-of-view": "^5.3.0",
         "request": "^2.88.2"
     },
