--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "start": "node app.js",
         "dev": "nodemon app.js",
-        "deploy": "gcloud app deploy --project=tough-anagram-350016 --quiet"
+        "deploy": "gcloud app deploy --project=eejits-tools --quiet",
+        "logs": "gcloud app logs tail --project=eejits-tools"
     },
     "dependencies": {
         "@fastify/static": "^5.0.2",
@@ -15,7 +16,6 @@
         "dotenv": "^16.0.0",
         "ejs": "^3.1.8",
         "fastify": "^3.29.0",
-        "fs": "^0.0.1-security",
         "node-fetch": "^3.2.5",
         "point-of-view": "^5.3.0",
         "request": "^2.88.2"
