--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
         "logs": "gcloud app logs tail --project=eejits-tools"
     },
     "dependencies": {
-        "@fastify/static": "^5.0.2",
+        "@fastify/static": "^6.4.0",
+        "@fastify/view": "^7.0.0",
         "canvas": "^2.9.1",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.8",
-        "fastify": "^3.29.0",
+        "fastify": "^4.2.0",
         "node-fetch": "^3.2.5",
-        "point-of-view": "^5.3.0",
         "request": "^2.88.2"
     },
     "devDependencies": {
