--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^16.0.0",
         "ejs": "^3.1.8",
         "fastify": "^4.2.0",
-        "node-fetch": "^3.2.5"
+        "node-fetch": "^3.2.5",
+        "node-html-parser": "^5.4.1"
     },
     "devDependencies": {
         "eslint": "^8.16.0",
