--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fastify/static": "^6.4.0",
         "@fastify/view": "^7.0.0",
         "canvas": "^2.9.3",
+        "chalk": "^5.0.1",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "fastify": "^4.2.0",
