--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,9 +3,13 @@ name: 'CodeQL'
 on:
     push:
         branches: [main]
+        paths:
+            - '**.js'
     pull_request:
         # The branches below must be a subset of the branches above
         branches: [main]
+        paths:
+            - '**.js'
 
 jobs:
     analyze:
