fully migrate to Railway hosting

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "scripts": {
         "start": "node app.js",
         "dev": "nodemon app.js",
-        "deploy": "npm run parse-app-yaml && gcloud app deploy --project=eejits-tools --quiet",
-        "logs": "gcloud app logs tail --project=eejits-tools",
-        "parse-app-yaml": "node parse-app-yaml.js"
+        "force-deploy": "railway up",
+        "stop-cloud": "railway down --yes"
     },
     "dependencies": {
         "@fastify/static": "^6.4.0",
