--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
-        "dev": "nodemon app.js",
+        "dev": "node ./dev.js",
         "force-deploy": "railway up",
         "stop-cloud": "railway down --yes"
     },
@@ -15,6 +15,7 @@
         "@fastify/view": "^7.0.0",
         "canvas": "^2.9.3",
         "chalk": "^5.0.1",
+        "chokidar": "^3.5.3",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "fastify": "^4.8.1",
