cleanup tone indicators & removed system related ones to prevent confusion
remove `stop-cloud`, add `logs` npm script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node app.js",
         "dev": "node ./dev.js",
         "force-deploy": "railway up",
-        "stop-cloud": "railway down --yes"
+        "logs": "railway logs"
     },
     "dependencies": {
         "@fastify/static": "^6.4.0",
