--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "chalk": "^5.0.1",
         "chokidar": "^3.5.3",
         "dotenv": "^16.0.1",
-        "ejs": "^3.1.8",
         "fastify": "^4.8.1",
+        "handlebars": "^4.7.7",
         "node-fetch": "^3.2.5",
         "node-html-parser": "^5.4.1"
     },
