rename `runResult` to `result` in ids, update toastify import, cleanup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
+    "env": { "browser": true, "es2021": true },
     "plugins": ["jsdoc"],
     "extends": ["eslint:recommended", "plugin:jsdoc/recommended"],
     "parserOptions": {
