--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,7 @@
     "env": { "browser": true, "es2021": true },
     "plugins": ["jsdoc"],
     "extends": ["eslint:recommended", "plugin:jsdoc/recommended"],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
+    "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
     "rules": {
         "camelcase": ["warn"],
         "default-case-last": ["warn"],
