--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "chokidar": "^3.5.3",
         "fastify": "^4.10.2",
         "handlebars": "^4.7.7",
+        "mongoose": "^6.7.3",
         "node-fetch": "^3.2.5",
         "node-html-parser": "^5.4.1"
     },
