--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "handlebars": "^4.7.7",
         "mongoose": "^6.7.3",
         "node-fetch": "^3.2.5",
-        "node-html-parser": "^5.4.1"
+        "node-html-parser": "^5.4.1",
+        "tree-kill": "^1.2.2"
     },
     "devDependencies": {
         "eslint": "^8.16.0",
