--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "canvas": "^2.9.3",
         "chalk": "^5.0.1",
         "chokidar": "^3.5.3",
+        "consola": "^3.1.0",
         "fastify": "^4.10.2",
         "handlebars": "^4.7.7",
         "mongoose": "^7.0.0",
