--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,4 @@
 {
-    "extends": ["github>Eejit43/renovate-config"]
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": ["local>Eejit43/renovate-config"]
 }
