--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
         "handlebars": "^4.7.7",
         "mongoose": "^7.2.1",
         "node-fetch": "^3.3.1",
-        "node-html-parser": "^6.1.5",
-        "tree-kill": "^1.2.2"
+        "node-html-parser": "^6.1.5"
     },
     "devDependencies": {
         "eslint": "^8.41.0",
-        "eslint-plugin-jsdoc": "^45.0.0"
+        "eslint-plugin-jsdoc": "^45.0.0",
+        "shelljs": "^0.8.5",
+        "tree-kill": "^1.2.2"
     }
 }
