--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "packageManager": "pnpm@8.6.4",
     "scripts": {
         "start": "node --max-old-space-size=100 app.js",
-        "dev": "node ./dev.js",
+        "dev": "pnpm run build && node dev.js",
+        "build": "node compile.js",
         "force-deploy": "railway up",
         "logs": "railway logs"
     },
@@ -16,14 +17,20 @@
         "chalk": "^5.2.0",
         "chokidar": "^3.5.3",
         "consola": "^3.1.0",
+        "esbuild": "^0.18.9",
         "fastify": "^4.18.0",
+        "glob": "^10.3.0",
         "handlebars": "^4.7.7",
         "mongoose": "^7.3.1",
         "node-html-parser": "^6.1.5"
     },
     "devDependencies": {
+        "@tsconfig/recommended": "^1.0.2",
+        "@types/node": "^20.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.60.0",
+        "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
-        "eslint-plugin-jsdoc": "^46.3.0",
-        "tree-kill": "^1.2.2"
+        "tree-kill": "^1.2.2",
+        "typescript": "^5.1.3"
     }
 }
