chore: ignore other compiled files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@ node_modules/
 app.js
 dev.js
 apod-fetcher.js
+data/*.js
+scripts/*.js
+scripts/pages/**/*.js
 public/scripts/*.js
 public/scripts/pages/**/*.js
