feat: commit sha display, refactoring with move to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
             "@data/*": ["./data/*"]
         }
     },
-    "include": ["dev.ts", "app.ts"]
+    "include": ["dev.ts", "app.ts", "apod-fetcher.ts"]
 }
