--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "logs": "railway logs"
     },
     "dependencies": {
+        "@fastify/rate-limit": "^8.0.1",
         "@fastify/static": "^6.10.2",
         "@fastify/view": "^7.4.1",
         "canvas": "^2.11.2",
