chore: run CodeQl on config file update

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,6 +5,7 @@ on:
         branches: [main]
         paths:
             - '**.ts'
+            - 'codeql-analysis.yml'
     pull_request:
         # The branches below must be a subset of the branches above
         branches: [main]
