--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,12 +5,13 @@ on:
         branches: [main]
         paths:
             - '**.ts'
-            - 'codeql-analysis.yml'
+            - '.github/workflows/codeql-analysis.yml'
     pull_request:
         # The branches below must be a subset of the branches above
         branches: [main]
         paths:
             - '**.ts'
+            - '.github/workflows/codeql-analysis.yml'
 
 jobs:
     analyze:
