--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
     "trailingComma": "none",
     "overrides": [
         {
-            "files": ["*.hbs"],
+            "files": ["*.hbs", "*.css"],
             "options": {
                 "singleQuote": false
             }
