--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "stylelint": "^15.9.0",
+        "stylelint-config-standard": "^33.0.0",
         "tree-kill": "^1.2.2",
         "typescript": "^5.1.3"
     }
