Revert "feat: add remove-compiled script to package.json until better dev/app script is made"
This reverts commit 5bc04a572340076495fd50cb85ef6e7dc71bdacc.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "dev": "pnpm run build && node dev.js",
         "build": "node compile.js",
         "force-deploy": "railway up",
-        "logs": "railway logs",
-        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete"
+        "logs": "railway logs"
     },
     "dependencies": {
         "@fastify/rate-limit": "^8.0.1",
