--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.2",
         "@types/node": "^20.3.2",
+        "@types/ua-parser-js": "^0.7.36",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "prettier": "^2.8.8",
+        "prettier-plugin-organize-imports": "^3.2.2",
         "stylelint": "^15.9.0",
         "stylelint-config-standard": "^33.0.0",
         "tree-kill": "^1.2.2",
