--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     },
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.2",
+        "@types/chroma-js": "^2.4.0",
         "@types/node": "^20.3.2",
         "@types/ua-parser-js": "^0.7.36",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "mathjs": "^11.8.2",
         "prettier": "^2.8.8",
         "prettier-plugin-organize-imports": "^3.2.2",
         "stylelint": "^15.9.0",
