--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "eslint-plugin-jsdoc": "^46.4.3",
         "mathjs": "^11.8.2",
         "prettier": "^2.8.8",
         "prettier-plugin-organize-imports": "^3.2.2",
