chore: simplify .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,5 @@
 
 node_modules/
 
-app.js
-dev.js
-apod-fetcher.js
-
-data/*.js
-public/data
-
-scripts/*.js
-scripts/pages/**/*.js
-public/scripts/*.js
-public/scripts/pages/**/*.js
+*.js
+!compile.js
