refactor: extend my global eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,47 +1,4 @@
 {
-    "extends": [
-        "eslint:recommended", //
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended-type-checked",
-        "plugin:@typescript-eslint/stylistic-type-checked",
-        "plugin:jsdoc/recommended-typescript"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "env": { "browser": true },
-    "root": true,
-    "parserOptions": { "project": ["./tsconfig.json", "./scripts/tsconfig.json", "./data/tsconfig.json"] },
-    "rules": {
-        "@typescript-eslint/ban-ts-comment": ["error", { "ts-ignore": "allow-with-description" }],
-        "@typescript-eslint/default-param-last": "error",
-        "@typescript-eslint/dot-notation": "error",
-        "@typescript-eslint/naming-convention": ["error", { "selector": ["default", "variableLike", "method"], "format": ["strictCamelCase", "UPPER_CASE"] }, { "selector": ["default", "variableLike", "method"], "format": null, "filter": { "regex": "^\\d+$", "match": true } }, { "selector": "typeLike", "format": ["StrictPascalCase"] }, { "selector": "memberLike", "format": null, "filter": { "regex": "[-]", "match": true } }],
-        "@typescript-eslint/no-floating-promises": "off",
-        "@typescript-eslint/no-misused-promises": "off",
-        "@typescript-eslint/no-unnecessary-type-assertion": "off",
-        "@typescript-eslint/no-unused-expressions": "error",
-        "@typescript-eslint/restrict-template-expressions": ["error", { "allowNumber": true, "allowBoolean": true }],
-        "curly": ["error", "multi"],
-        "default-case-last": "error",
-        "default-param-last": "off",
-        "dot-notation": "off",
-        "eqeqeq": ["error", "always"],
-        "jsdoc/check-indentation": "warn",
-        "jsdoc/require-description-complete-sentence": "warn",
-        "jsdoc/require-description": "warn",
-        "jsdoc/require-hyphen-before-param-description": ["warn", "never"],
-        "jsdoc/require-returns": "off",
-        "no-await-in-loop": "error",
-        "no-console": ["error", { "allow": ["warn", "error"] }],
-        "no-lonely-if": "error",
-        "no-return-await": "error",
-        "no-template-curly-in-string": "error",
-        "no-unneeded-ternary": "error",
-        "no-unused-expressions": "off",
-        "no-useless-concat": "error",
-        "object-shorthand": "error",
-        "prefer-arrow-callback": "error",
-        "prefer-destructuring": ["error", { "array": false, "object": true }, { "enforceForRenamedProperties": false }],
-        "yoda": "error"
-    }
+    "extends": ["@eejit"],
+    "parserOptions": { "project": ["./tsconfig.json", "./scripts/tsconfig.json", "./data/tsconfig.json"] }
 }
