chore: correct global ts config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
 {
-    "extends": ["@eejit"],
+    "extends": ["@eejit/eslint-config-typescript"],
     "parserOptions": { "project": ["./tsconfig.json", "./scripts/tsconfig.json", "./data/tsconfig.json"] }
 }
