refactor: run postcss on css files (no css changes yet)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "node compile.js",
         "force-deploy": "railway up",
         "logs": "railway logs",
-        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete"
+        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete"
     },
     "dependencies": {
         "@fastify/rate-limit": "^8.0.2",
@@ -20,11 +20,14 @@
         "chokidar": "^3.5.3",
         "consola": "^3.2.3",
         "esbuild": "^0.18.11",
+        "esbuild-postcss": "^0.0.4",
         "fastify": "^4.19.2",
         "glob": "^10.3.3",
         "handlebars": "^4.7.7",
         "mongoose": "^7.3.3",
-        "node-html-parser": "^6.1.5"
+        "node-html-parser": "^6.1.5",
+        "postcss": "^8.4.26",
+        "postcss-preset-env": "^9.0.0"
     },
     "devDependencies": {
         "@eejit/eslint-config-typescript": "^1.0.4",
