--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint-plugin-jsdoc": "^46.4.3",
         "mathjs": "^11.8.2",
         "prettier": "^3.0.0",
+        "prettier-plugin-css-order": "^1.3.1",
         "prettier-plugin-organize-imports": "^3.2.2",
         "stylelint": "^15.10.1",
         "stylelint-config-standard": "^34.0.0",
