refactor: add stylelint-use-nesting and resolve issues

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,8 +1,11 @@
 {
     "extends": "stylelint-config-standard",
+    "plugins": ["stylelint-use-nesting"],
     "rules": {
         "no-descending-specificity": null,
         "color-named": "always-where-possible",
-        "function-disallowed-list": ["hsl", "hwb", "lab", "lch"]
+        "function-disallowed-list": ["hsl", "hwb", "lab", "lch"],
+
+        "csstools/use-nesting": "always"
     }
 }
