--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "prettier-plugin-organize-imports": "^3.2.2",
         "stylelint": "^15.10.1",
         "stylelint-config-standard": "^34.0.0",
+        "stylelint-use-nesting": "^4.1.0",
         "tree-kill": "^1.2.2",
         "typescript": "^5.1.6"
     }
