--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
     "name": "eejitstools",
     "private": true,
     "type": "module",
-    "packageManager": "pnpm@8.6.7",
     "scripts": {
-        "start": "node --max-old-space-size=100 app.js",
-        "dev": "pnpm run build && node dev.js",
         "build": "node compile.js",
+        "dev": "pnpm run build && node dev.js",
         "force-deploy": "railway up",
         "logs": "railway logs",
-        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete"
+        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
+        "start": "node --max-old-space-size=100 app.js"
     },
     "dependencies": {
         "@fastify/rate-limit": "^8.0.2",
@@ -43,10 +42,12 @@
         "prettier": "^3.0.0",
         "prettier-plugin-css-order": "^1.3.1",
         "prettier-plugin-organize-imports": "^3.2.2",
+        "prettier-plugin-packagejson": "^2.4.5",
         "stylelint": "^15.10.1",
         "stylelint-config-standard": "^34.0.0",
         "stylelint-use-nesting": "^4.1.0",
         "tree-kill": "^1.2.2",
         "typescript": "^5.1.6"
-    }
+    },
+    "packageManager": "pnpm@8.6.7"
 }
