--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,12 +4,14 @@ on:
     push:
         branches: [main]
         paths:
+            - 'compile.js'
             - '**.ts'
             - '.github/workflows/codeql-analysis.yml'
     pull_request:
         # The branches below must be a subset of the branches above
         branches: [main]
         paths:
+            - 'compile.js'
             - '**.ts'
             - '.github/workflows/codeql-analysis.yml'
 
