--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "node compile.js",
-        "dev": "pnpm run build && node dev.js",
+        "dev": "pnpm run build && node development.js",
         "force-deploy": "railway up",
         "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
         "start": "node --max-old-space-size=100 app.js"
@@ -27,15 +27,11 @@
         "postcss-preset-env": "^9.0.0"
     },
     "devDependencies": {
-        "@eejit/eslint-config-typescript": "^1.0.4",
+        "@eejit/eslint-config-typescript": "^2.1.0",
         "@tsconfig/recommended": "^1.0.2",
         "@types/chroma-js": "^2.4.0",
         "@types/node": "^20.4.2",
         "@types/ua-parser-js": "^0.7.36",
-        "@typescript-eslint/eslint-plugin": "^6.1.0",
-        "@typescript-eslint/parser": "^6.1.0",
-        "eslint": "^8.45.0",
-        "eslint-plugin-jsdoc": "^46.4.4",
         "mathjs": "^11.9.0",
         "prettier": "^3.0.0",
         "prettier-plugin-css-order": "^1.3.1",
