--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
         "module": "NodeNext",
         "removeComments": true
     },
-    "include": ["dev.ts", "app.ts", "apod-fetcher.ts"]
+    "include": ["development.ts", "app.ts", "apod-fetcher.ts"]
 }
