--- a/data/tsconfig.json
+++ b/data/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
-        "lib": ["DOM", "DOM.Iterable"],
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "removeComments": true
     },
     "include": ["*.ts"]
