refactor: convert compile script to TS

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "eejitstools",
     "type": "module",
     "scripts": {
-        "build": "node compile.js",
+        "build": "cp compile.ts compile.js && node compile.js",
         "dev": "pnpm run build && node development.js",
         "force-deploy": "railway up",
-        "remove-compiled": "find . -type f -name '*.js' ! -name 'compile.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
+        "remove-compiled": "find . -type f -name '*.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
         "start": "node --max-old-space-size=100 app.js"
     },
     "dependencies": {
