chore: update remove-compiled script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "cp compile.ts compile.js && node compile.js",
         "dev": "pnpm run build && node development.js",
         "force-deploy": "railway up",
-        "remove-compiled": "find . -type f -name '*.js' ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
+        "remove-compiled": "find . -type f \\( -name '*.js' -o -name '*.js.map' \\) ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
         "start": "node --max-old-space-size=100 app.js"
     },
     "dependencies": {
