fix: enable source maps

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "cp compile.ts compile.js && node compile.js",
-        "dev": "pnpm run build && node development.js",
+        "dev": "pnpm run build && node development.js --enable-source-maps",
         "force-deploy": "railway up",
         "remove-compiled": "find . -type f \\( -name '*.js' -o -name '*.js.map' \\) ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
         "start": "node --max-old-space-size=100 app.js"
