refactor: use global stylelint config

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,11 +1,3 @@
 {
-    "extends": "stylelint-config-standard",
-    "plugins": ["stylelint-use-nesting"],
-    "rules": {
-        "no-descending-specificity": null,
-        "color-named": "always-where-possible",
-        "function-disallowed-list": ["hsl", "hwb", "lab", "lch"],
-
-        "csstools/use-nesting": "always"
-    }
+    "extends": "@eejit/stylelint-config"
 }
