--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "@eejit/eslint-config-typescript": "^2.5.2",
+        "@eejit/stylelint-config": "^1.1.0",
         "@tsconfig/recommended": "^1.0.2",
         "@types/chroma-js": "^2.4.0",
         "@types/node": "^20.4.8",
@@ -38,8 +39,6 @@
         "prettier-plugin-organize-imports": "^3.2.3",
         "prettier-plugin-packagejson": "^2.4.5",
         "stylelint": "^15.10.2",
-        "stylelint-config-standard": "^34.0.0",
-        "stylelint-use-nesting": "^4.1.0",
         "tree-kill": "^1.2.2",
         "typescript": "^5.1.6"
     },
