--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "remove-compiled": "find . -type f \\( -name '*.js' -o -name '*.js.map' \\) ! -path './node_modules/*' ! -path './public/scripts/external/*' -delete && find ./public/styles -type f -name '*.css' ! -path './public/styles/external/*' -delete",
         "start": "node --max-old-space-size=100 app.js"
     },
+    "prettier": "@eejit/prettier-config",
     "dependencies": {
         "@fastify/rate-limit": "^8.0.3",
         "@fastify/static": "^6.10.2",
@@ -28,16 +29,13 @@
     },
     "devDependencies": {
         "@eejit/eslint-config-typescript": "^2.5.2",
+        "@eejit/prettier-config": "^1.3.0",
         "@eejit/stylelint-config": "^1.1.0",
         "@tsconfig/recommended": "^1.0.2",
         "@types/chroma-js": "^2.4.0",
         "@types/node": "^20.4.8",
         "@types/ua-parser-js": "^0.7.36",
         "mathjs": "^11.9.1",
-        "prettier": "^3.0.1",
-        "prettier-plugin-css-order": "^2.0.0",
-        "prettier-plugin-organize-imports": "^3.2.3",
-        "prettier-plugin-packagejson": "^2.4.5",
         "stylelint": "^15.10.2",
         "tree-kill": "^1.2.2",
         "typescript": "^5.1.6"
