--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "pnpm run build && node development.js --enable-source-maps",
         "force-deploy": "railway up",
         "remove-compiled": "rm -rf dist && find . -maxdepth 1 -type f \\( -name '*.js' -o -name '*.js.map' \\) -delete",
-        "start": "node --enable-source-maps --max-old-space-size=100 dist/app.js"
+        "start": "node --no-warnings --enable-source-maps --max-old-space-size=100 dist/app.js"
     },
     "prettier": "@eejit/prettier-config",
     "dependencies": {
