--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
         "module": "NodeNext",
         "removeComments": true
     },
-    "include": ["development.ts", "src/app.ts", "src/apod-fetcher.ts"]
+    "include": ["development.ts", "src/app.ts", "src/route-handlers/*.ts"]
 }
