--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@eejit/stylelint-config": "^3.0.1",
         "@tsconfig/recommended": "^1.0.6",
         "@types/chroma-js": "^2.4.4",
+        "@types/node": "^20.12.7",
         "@types/ua-parser-js": "^0.7.39",
         "mathjs": "^12.4.1",
         "stylelint": "^16.3.1",
