--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "NodeNext",
-        "removeComments": true
+        "target": "ESNext",
+        "module": "NodeNext"
     },
     "include": ["development.ts", "src/app.ts", "src/route-handlers/*.ts"]
 }
