chore: drop target params from compile, prevent deletion of eslint.config.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "pnpm run remove-compiled && npx esbuild compile.ts --outfile=compile.js --target=node20 --platform=node && node compile.js",
         "dev": "pnpm run build && node development.js --enable-source-maps",
         "force-deploy": "railway up",
-        "remove-compiled": "rm -rf dist && find . -maxdepth 1 -type f \\( -name '*.js' -o -name '*.js.map' \\) -delete",
+        "remove-compiled": "rm -rf dist && find . -maxdepth 1 -type f \\( -name '*.js' -o -name '*.js.map' \\) ! -name 'eslint.config.js' -delete",
         "start": "node --no-warnings --enable-source-maps --max-old-space-size=100 dist/app.js"
     },
     "prettier": "@eejit/prettier-config",
