--- a/src/public/tsconfig.json
+++ b/src/public/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
         "target": "ESNext",
-        "lib": ["DOM", "DOM.Iterable"]
+        "lib": ["DOM", "DOM.Iterable", "ESNext"]
     },
     "include": ["data/*.ts", "scripts/*.ts", "scripts/pages/**/*.ts"]
 }
