--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@fastify/rate-limit": "^9.1.0",
         "@fastify/static": "^7.0.4",
         "@fastify/view": "^9.1.0",
-        "canvas": "^2.11.2",
+        "canvas": "^3.0.0-rc2",
         "chalk": "^5.3.0",
         "chokidar": "^3.6.0",
         "consola": "^3.2.3",
