--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@fastify/rate-limit": "^10.1.1",
         "@fastify/static": "^8.0.1",
         "@fastify/view": "^10.0.1",
-        "canvas": "^3.0.0-rc2",
+        "canvas": "^2.11.2",
         "chalk": "^5.3.0",
         "chokidar": "^4.0.1",
         "consola": "^3.2.3",
@@ -28,11 +28,11 @@
     },
     "devDependencies": {
         "@eejit/eslint-config-typescript": "^13.3.0",
-        "@eejit/prettier-config": "^3.0.0",
+        "@eejit/prettier-config": "^3.1.1",
         "@eejit/stylelint-config": "^4.0.0",
         "@tsconfig/recommended": "^1.0.7",
         "@types/chroma-js": "^2.4.4",
-        "@types/node": "^20.16.10",
+        "@types/node": "^22.7.5",
         "@types/ua-parser-js": "^0.7.39",
         "mathjs": "^13.2.0",
         "stylelint": "^16.9.0",
