--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "stylelint": "^16.10.0",
         "tree-kill": "^1.2.2",
         "typescript": "^5.6.3"
+    },
+    "engines": {
+        "node": ">=22.0.0"
     }
 }
