--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@eejit/stylelint-config": "^5.0.0",
         "@tsconfig/recommended": "^1.0.8",
         "@types/chroma-js": "^3.1.1",
-        "@types/node": "^22.14.0",
+        "@types/node": "latest",
         "@types/ua-parser-js": "^0.7.39",
         "mathjs": "^14.4.0",
         "stylelint": "^16.18.0",
