--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "postcss-preset-env": "^10.6.0"
     },
     "devDependencies": {
+        "@dword-design/eslint-plugin-import-alias": "^8.1.3",
         "@eejit/eslint-config-typescript": "^16.0.1",
         "@eejit/prettier-config": "^3.6.2",
         "@eejit/stylelint-config": "^6.0.0",
@@ -35,6 +36,7 @@
         "postcss": "^8.5.6",
         "stylelint": "^16.26.1",
         "tree-kill": "^1.2.2",
+        "tsc-alias": "^1.8.16",
         "typescript": "^5.9.3"
     },
     "pnpm": {
