--- a/src/public/tsconfig.json
+++ b/src/public/tsconfig.json
@@ -3,6 +3,13 @@
     "include": ["data/*.ts", "scripts/*.ts", "scripts/pages/**/*.ts"],
 
     "compilerOptions": {
-        "moduleResolution": "Bundler" // Allow importing of dependencies for types
+        "moduleResolution": "Bundler", // Allow importing of dependencies for types
+        "baseUrl": "./",
+        "paths": {
+            "@route-handlers/*": ["../route-handlers/*"],
+            "@/*": ["../*"],
+            "@data/*": ["./data/*"],
+            "@scripts/*": ["./scripts/*"]
+        }
     }
 }
